# casper-zk-with-risc0

./: .gitignore  README.md  justfile
blake2b/: Cargo.toml
blake2b/src/: lib.rs
data/: method  seal
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
old-data/: journal  method  seal
prover/: Cargo.toml
prover/src/: main.rs
risc0-casper-blake2b/: Cargo.toml
risc0-casper-blake2b/src/: lib.rs
verifier/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
verifier/src/: lib.rs  verifier_contract.rs
