[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b" }
risc0-core = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b" }
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b" }
risc0-circuit-rv32im = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b" }
serde_json = "*"