[package]
name = "risc0-casper-blake2b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-core = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b", default-features = false }
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b", default-features = false }
casper-contract = "1.4.4"