[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { path = "../../risc0/risc0/risc0/zkvm", default-features = false }
risc0-zkp = { path = "../../risc0/risc0/risc0/zkp", default-features = false }
odra = { version = "0.2.0", default-features = false }
blake2b = { path = "../blake2b" }
# wasm-soft-float-bs = { path = "../../wasm-float-transpiler/backends/bs/" }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
