[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b", default-features = false }
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b", default-features = false }
odra = { version = "0.2.0", default-features = false }
risc0-casper-blake2b = { path = "../risc0-casper-blake2b" }
# wasm-soft-float-bs = { path = "../../wasm-float-transpiler/backends/bs/" }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
