[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b", default-features = false }

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0", rev = "d23cb57039e09f2fc8457cc7f1e6d9b052f2c60b" }

[[bin]]
name = "multiply"
path = "src/multiply.rs"